Add top section of the welcome page with style

--- a/index.html
+++ b/index.html
@@ -15,5 +15,14 @@
         <li>Our Stores</li>
       </ul>
     </nav>
+
+    <div class="top-page">
+      <div class="top-page-description">
+        <h1>New Release Originals</h1>
+        <p>Stride in style with Adidas. Cutting-edge design meets unmatched comfort for the perfect step. Elevate your look and performance with Adidas.</p>
+        <button>Buy Now</button>
+      </div>
+      <img src="StanSmith.avif">
+    </div>
   </body>
 </html>
