Add shoe recommendation section

--- a/index.html
+++ b/index.html
@@ -24,5 +24,28 @@
       </div>
       <img src="StanSmith.avif">
     </div>
+
+    <div class="mid-page">
+      <h1>Recommended Collection</h1>
+      <div class="mid-page-shoes">
+        <div class="info">
+          <img src="shoe1.avif">
+          <p>Shoe 1</p>
+        </div>
+        <div class="info">
+          <img src="shoe2.avif">
+          <p>Shoe 2</p>
+        </div>  
+        <div class="info">
+          <img src="shoe3.avif">
+          <p>Shoe 3</p>
+        </div>    
+        <div class="info">
+          <img src="shoe4.avif">
+          <p>Shoe 4</p>
+        </div>  
+      </div>
+    </div>
+    
   </body>
 </html>
