Add inspirational quotes

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
         </div>  
       </div>
     </div>
-    
+
+    <div class="inspiration">
+      <div class="inspiration-quote">
+        <p id="quote">Walk confidently, for every step in the right shoes leads to a remarkable journey.</p>
+        <p id="author">-Anon</p>
+      </div>
+    </div>
+
   </body>
 </html>
