Add bottom page but unfinished

--- a/index.html
+++ b/index.html
@@ -54,5 +54,15 @@
       </div>
     </div>
 
+    <div class="bottom-page">
+      <div class="bottom-page-border">
+        <div class="quotes">
+          <h3>What are you waiting for? Sign up now!</h3>
+          <p>Sign up for our product by clicking on the right button over there!</p>
+        </div>
+        <button type="button">Sign Up</button>
+      </div>
+    </div>
+
   </body>
 </html>
