--- a/index.html
+++ b/index.html
@@ -64,5 +64,9 @@
       </div>
     </div>
 
+    <div class="footer">
+      <p>Copyright © The Odin Project 2023</p>
+    </div>
+
   </body>
 </html>
